# crates/sevenmark-server/src/api/v0/routes/mod.rs
@@ -1,3 +1,3 @@
 pub mod openapi;
-mod parse;
+mod render;
 pub mod routes;
