# crates/sevenmark-server/src/api/v0/routes/render/routes.rs
@@ -1,0 +1,8 @@
+use super::render::render_endpoint;
+use crate::state::AppState;
+use axum::routing::post;
+use axum::Router;
+
+pub fn render_routes(_state: AppState) -> Router<AppState> {
+    Router::new().route("/render", post(render_endpoint))
+}
