# crates/sevenmark-server/src/api/v0/routes/routes.rs
@@ -1,8 +1,8 @@
-use super::parse::routes::parse_routes as ParseRoutes;
+use super::render::routes::render_routes as RenderRoutes;
 use crate::state::AppState;
 use axum::Router;
 
 /// v0 API 라우터
 pub fn v0_routes(state: AppState) -> Router<AppState> {
-    Router::new().merge(ParseRoutes(state))
+    Router::new().merge(RenderRoutes(state))
 }
